@@ -146,10 +146,11 @@
       <type>P</type>
       <action>Auto</action>
       <range>Self</range>
+      <duration>Always</duration>
       <bonus>
         <unlockskills name="Assensing">Name</unlockskills>
+        <unlockskills name="Astral Combat">Name</unlockskills>
       </bonus>
-      <duration>Always</duration>
       <source>SR5</source>
       <page>395</page>
     </power>
@@ -580,6 +581,9 @@
       <action>Free</action>
       <range>LOS</range>
       <duration>Instant</duration>
+      <bonus>
+        <unlockskills name="Counterspelling">Name</unlockskills>
+      </bonus>
       <source>SG</source>
       <page>196</page>
     </power>
