@@ -24,6 +24,8 @@ Data Changes:
 - Added content from the German-exclusive sourcebook "Hamburg".
 - Removed redundant 'Enable Spells and Spirits Tab' improvement. Closes #3189
 - Added an optional rule from Chrome Flesh to allow Trolls to treat their horns as per the bio-weapon on page 121 of Chrome Flesh. 
+- Fixed incorrect requirements for the Special Modifications and Prototype Materials qualities. 
+- The Dual Natured critter power now grants access to Astral Combat. Magical Guard now grants access to the Counterspelling skill. RAW implies this is correct, but I'm not super confident in it. Closes #3195
 
 New Strings:
 
